@@ -14,6 +14,15 @@
     Add INSTALL_ROOT variable to allow installation into a packageable
     directory.
 
+    * ext/bcmath/libbcmath/src/Makefile.am
+      ext/informix/config.m4
+      ext/msql/config.m4
+      ext/odbc/config.m4
+      sapi/apache/apMakefile.tmpl
+      sapi/apache/libphp4.module.in
+      sapi/thttpd/config.m4
+    Separate CPPFLAGS from CFLAGS.
+
 2001-04-02  Wez Furlong  <wez.php@thebrainroom.com>
 
     * ext/openssl/openssl.c:
